--- a/package.json
+++ b/package.json
@@ -1,30 +1,78 @@
 {
-  "name": "uswg-web",
-  "version": "1.0.0",
-  "private": true,
-  "author": "Muzaffer Kadir YILMAZ",
+  "name": "klyppr-desktop",
+  "version": "1.1.0",
+  "description": "Desktop version of Klyppr video editor",
+  "main": "main.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "cross-env NODE_ENV=development electron .",
+    "build": "electron-builder",
+    "build:mac": "electron-builder --mac",
+    "build:win32": "electron-builder --win --ia32",
+    "build:win64": "electron-builder --win --x64"
   },
+  "build": {
+    "appId": "com.klyppr.app",
+    "productName": "Klyppr",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "**/*",
+      "!videos/*",
+      "!dist/*",
+      "!build/*"
+    ],
+    "extraResources": [
+      {
+        "from": "bin/mac/ffmpeg",
+        "to": "bin/ffmpeg"
+      },
+      {
+        "from": "bin/mac/ffprobe",
+        "to": "bin/ffprobe"
+      },
+      {
+        "from": "bin/win/ffmpeg.exe",
+        "to": "bin/ffmpeg.exe"
+      },
+      {
+        "from": "bin/win/ffprobe.exe",
+        "to": "bin/ffprobe.exe"
+      }
+    ],
+    "mac": {
+      "category": "public.app-category.video",
+      "target": [
+        "dmg"
+      ],
+      "icon": "public/logo.png"
+    },
+    "win": {
+      "target": [
+        "portable"
+      ],
+      "icon": "public/logo.png"
+    },
+    "portable": {
+      "artifactName": "Klyppr-Portable-${arch}.exe"
+    }
+  },
+  "keywords": [
+    "video",
+    "editor",
+    "silence",
+    "ffmpeg"
+  ],
+  "author": "Muzaffer Kadir YILMAZ",
+  "license": "ISC",
   "dependencies": {
-    "@ffmpeg/core-mt": "^0.12.6",
-    "@ffmpeg/ffmpeg": "^0.12.7",
-    "@ffmpeg/util": "^0.12.1",
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18"
+    "fluent-ffmpeg": "^2.1.3",
+    "fs-extra": "^11.3.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "string-replace-loader": "^3.1.0",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "@electron/remote": "^2.1.2",
+    "cross-env": "^7.0.3",
+    "electron": "^29.1.4",
+    "electron-builder": "^24.13.3"
   }
 }
